--- a/style.css
+++ b/style.css
@@ -1,5 +1,32 @@
-body {
+*, ::before, ::after {
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+body{
+  margin: 0;
+}
+
+
+
+
+
+.full-screen-container {
   
-    background: #ffffff url("Screenshot 2024-07-16 at 10.28.54 PM.png")  ;
+    background-image: url("Screenshot 2024-07-16 at 10.28.54 PM.png") ;
+    height: 100vh;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   
+  }
+
+
+  .login-container{
+    margin: 0;
+  }
+
+
+  .login-title {
+    margin: 0;
   }
