--- a/style.css
+++ b/style.css
@@ -24,9 +24,46 @@ body{
 
   .login-container{
     margin: 0;
+    background-color: rgba(37, 93, 110,0.7);
+    box-shadow:   0 0 15px 5px rgba(16, 153, 194, 0.6);
+    padding: 40px 30px;
+    width: 80%;
+    max-width: 600px;
+    border-radius: 10px;
+
+
   }
 
 
   .login-title {
     margin: 0;
+    text-align: center;
+    color: aliceblue;
+    font-weight: normal;
+    padding-bottom: 15px;
+   
   }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  color: aliceblue;
+}
+
+.details {
+
+  display: flex;
+  flex-direction: column;
+  
+
+}
+
+
+button {
+  background-color: rgba(81, 157, 180, 0.5);
+  border-radius: 3px;
+  border: 2px solid rgba(22, 185, 235, 0.5);
+  padding: 10px ;
+  margin-top: 20px;
+
+}
