--- a/Login Form/style.css
+++ b/Login Form/style.css
@@ -54,6 +54,8 @@ body{
 
   display: flex;
   flex-direction: column;
+  margin: 10px;
+  font-size: large;
   
 
 }
@@ -65,5 +67,16 @@ button {
   border: 2px solid rgba(22, 185, 235, 0.5);
   padding: 10px ;
   margin-top: 20px;
+  color: aliceblue;
+  font-size: 20px;
 
+}
+
+.input {
+  padding: 10px;
+  border-radius: 5px;
+  border: 2px solid rgba(41, 119, 42, 0.5);
+  background-color: rgba(255, 255, 255, 0.4);
+  font-size: 25px;
+  color: white;
 }
